Unable to build WebKit with iOS 13.4 SDK https://bugs.webkit.org/show_bug.cgi?id=209317

Reviewed by Simon Fraser.

* Platform/spi/ios/UIKitSPI.h:
* UIProcess/ios/WKMouseGestureRecognizer.mm:


Canonical link: https://commits.webkit.org/222257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258751 268f45cc-cd09-0410-ab3c-d52691b4dbfc