Source/WebKit/UIProcess/ios/WKMouseGestureRecognizer.mm
@@ -30,6 +30,7 @@
 
 #import "NativeWebMouseEvent.h"
 #import "UIKitSPI.h"
+#import <pal/spi/ios/GraphicsServicesSPI.h>
 #import <wtf/Optional.h>
 
 static OptionSet<WebKit::WebEvent::Modifier> webEventModifiersForUIKeyModifierFlags(UIKeyModifierFlags flags)
@@ -77,8 +78,8 @@ static OptionSet<WebKit::WebEvent::Modifier> webEventModifiersForUIKeyModifierFl
 
     [super setView:view];
 
-    if (view._window) {
-        UIHoverEvent *hoverEvent = [UIApp _hoverEventForWindow:view._window];
+    if (view.window) {
+        UIHoverEvent *hoverEvent = [UIApp _hoverEventForWindow:view.window];
         [hoverEvent setNeedsHitTestReset];
     }
 }
